[gd_scene load_steps=4 format=3 uid="uid://6ncabvvqhph8"]

[ext_resource type="Script" uid="uid://dvyis440j3bv5" path="res://water_spell.gd" id="1_b2h18"]
[ext_resource type="Texture2D" uid="uid://bp06rd5i763lg" path="res://Acid Slime.png" id="2_8h5wh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i5veo"]
radius = 15.0
height = 32.0

[node name="WaterSpell" type="Area2D"]
script = ExtResource("1_b2h18")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-8, -6)
scale = Vector2(0.164063, 0.164063)
texture = ExtResource("2_8h5wh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, -2)
shape = SubResource("CapsuleShape2D_i5veo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
